Make mod run in 1.20